# medevents

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  Makefile  README.md  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
services/ingest/: Dockerfile  pyproject.toml
services/ingest/medevents_ingest/: __init__.py  cli.py  config.py  db.py  fetch.py  models.py  normalize.py  pipeline.py  seed.py
services/ingest/medevents_ingest/parsers/: __init__.py  _reset_for_tests.py  aap.py  ada.py  amied.py  base.py  cds.py  dentex.py  (+6 more)
services/ingest/tests/: conftest.py  test_aap_parser.py  test_aap_pipeline.py  test_ada_parser.py  test_amied_parser.py  test_amied_pipeline.py  test_cds_parser.py  test_cds_pipeline.py  test_cli.py  test_cli_dry_run.py  test_dentex_parser.py  test_dentex_pipeline.py  test_drift_observability.py  test_dry_run_pipeline.py  test_dry_run_unit.py  test_due_selection.py  test_eao_parser.py  test_eao_pipeline.py  test_europerio_parser.py  test_europerio_pipeline.py  test_fdi_parser.py  test_fdi_pipeline.py  test_fetch.py  test_forum_officine_parser.py  test_forum_officine_pipeline.py  test_gnydm_parser.py  test_gnydm_pipeline.py  test_morocco_dental_expo_parser.py  test_morocco_dental_expo_pipeline.py  test_normalize.py  test_parser_registry.py  test_pipeline.py  test_repositories.py  test_repositories_event_sources.py  test_repositories_events.py  test_repositories_review_items.py  test_repositories_source_pages.py  test_run_all.py  test_seed.py  test_source_bookkeeping.py
(+170 files in other folders)
