[project]
name = "medevents-ingest"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "pyyaml>=6.0",
  "structlog>=24.4.0",
]

[project.scripts]
medevents-ingest = "medevents_ingest.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "mypy>=1.11.0",
  "ruff>=0.6.0",
  "types-pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["medevents_ingest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
